--- a/css/style20090716.css
+++ b/css/style20090716.css
@@ -7,7 +7,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acron
 body{margin:1.5em 0;line-height:1.5;background:white;font-family:"Helvetica Neue", "Helvetica",Arial,sans-serif;color:black;font-size:12px;}
 
 /* layout */
-.container{width:950px;margin:0 auto;}
+.container{width:1110px;margin:0 auto;}
 .container:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
     /* header*/
 #header{margin:0;float:right;width:190px;padding-right:0;}
@@ -20,8 +20,10 @@ body{margin:1.5em 0;line-height:1.5;background:white;font-family:"Helvetica Neue
     /* light background sidebar */
 #newsbar{float:left;width:190px;padding:0 10px 0 10px;}
 #contribution{padding:0 1.5em 0 1.5em;font-size:0.9em;}
+    /* sitenews bar*/
+#bonusbar {width:150px; float:left;}
         /* ads */
-#pwblock{padding:1.5em;padding-top:0;margin-top:0;}
+#pwblock{padding-top:0;margin-top:0;}
 #pwblock td{padding:0px;}
 #pwblock table{margin-bottom:0px;width:auto;}
 .pwlink{font-size:0.9em;}
@@ -70,23 +72,28 @@ a:hover{background:#ccc;}
 #title { margin-bottom: auto; margin-top: none;}
 #transcription{margin-right:0pt;float:left;width:550px;padding-right:0pt;}
 #saved{padding:0.5em; background:#EEE;margin-bottom:1em;}
-#topnav { float: right; padding: 0px; margin: 4px 0 0 0;}
-#topnav li { margin: 2px; padding: 0px; list-style: none; float:left; width: 14px;background-image: url(http://static.nameremoved.com/pix/arrows.png); overflow:hidden;} 
-#topnav a, #topnav li { height: 7px; display: block;}
-#topnavfirst {background-position: 0px 0px;}
-#topnavfirst:hover {background-position: 0px -16px;}
-#topnavfirstnot {background-position: 0px -8px;}
-#topnavprev {background-position: -15px 0px;}
-#topnavprev:hover {background-position: -15px -16px;}
-#topnavprevnot {background-position: -15px -8px;}
-#topnavnext {background-position: -30px 0px;}
-#topnavnext:hover {background-position: -30px -16px;}
-#topnavnextnot {background-position: -30px -8px;}
-#topnavlast {background-position: -45px 0px;}
-#topnavlast:hover {background-position: -45px -16px;}
-#topnavlastnot {background-position: -45px -8px;}
-#topnav a {text-indent: -600px;}
-#topnav a:hover {background: none;}
+#topnav { float: right;}
+.storynavstart {float: left;}
+.storynavend {float: right;}
+.storytitle {text-align: center; margin-bottom: 0;}
+.storytitle  a {font-size: 0.9em; text-decoration: none; color: #444;}
+#topnav, .storynavstart, .storynavend { padding: 0px; margin: 4px 0 0 0;}
+#topnav li, .storynavstart li, .storynavend li { margin: 2px; padding: 0px; list-style: none; float:left; width: 14px;background-image: url(http://static.nameremoved.com/pix/arrows.png); overflow:hidden;} 
+#topnav a, #topnav li, .storynavstart a, .storynavend a, .storynavstart li, .storynavend li { height: 7px; display: block;}
+#topnavfirst, .storyfirst {background-position: 0px 0px;}
+#topnavfirst:hover, .storyfirst:hover {background-position: 0px -16px;}
+#topnavfirstnot, .storyfirstnot {background-position: 0px -8px;}
+#topnavprev, .storyprev {background-position: -15px 0px;}
+#topnavprev:hover, .storyprev:hover {background-position: -15px -16px;}
+#topnavprevnot, .storyprevnot {background-position: -15px -8px;}
+#topnavnext, .storynext {background-position: -30px 0px;}
+#topnavnext:hover, .storynext:hover {background-position: -30px -16px;}
+#topnavnextnot, .storynextnot {background-position: -30px -8px;}
+#topnavlast, .storylast {background-position: -45px 0px;}
+#topnavlast:hover, .storylast:hover {background-position: -45px -16px;}
+#topnavlastnot, .storylastnot {background-position: -45px -8px;}
+#topnav a, .storynavstart a, .storynavend a {text-indent: -600px;}
+#topnav a:hover, .storynavstart a, .storynavend a {background: none;}
 #bottomnav li {width: 70px; float:left; padding-right: 5px;}
 #bottomnav span.currently {float:none;}
 #bottomnav li.forward { text-align: right; }
@@ -104,7 +111,7 @@ h4{color:#666;margin-top:1.5em;}
 #contributors .nav{margin:0 6em 0.5em 6em;}
 
 /* default contribute box */
-#suggester {background-color:#ff9; border: 1px solid;}
+#suggester {background-color:#ff9; border: 1px solid; margin-top:1em;}
 #suggester a {display:block;text-decoration:none;padding:0 0.5em 0 0.5em;border-color:#ccc;}
 #suggester form {padding: 1.5em;}
 #suggester textarea, #suggester input {width:146px;}
