--- a/css/style20090716.css
+++ b/css/style20090716.css
@@ -1,120 +1,49 @@
-/* based on blueprint */
-
 /* reset */
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;}
-
 /* body */
-body{margin:1.5em 0;line-height:1.5;background:white;font-family:"Helvetica Neue", "Helvetica",Arial,sans-serif;color:black;font-size:12px;}
-
+body{margin:1.5em 0;line-height:1.5;background:white;font-family:"Helvetica",Arial,sans-serif;color:black;font-size:11px;}
 /* layout */
-.container{width:1110px;margin:0 auto;}
-.container:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
-    /* header*/
-#header{margin:0;float:right;width:190px;padding-right:0;}
-    /* mainbar */
-#mainbar{width:760px;float:left;}
-    /* page info (local headers)*/
-#pageinfo{float:right;width:190px;padding:0 10px 0 10px;}
-    /* main content box*/
-#main{float:left;width:550px;padding:0;margin:0;}
-    /* light background sidebar */
-#newsbar{float:left;width:190px;padding:0 10px 0 10px;}
-#contribution{padding:0 1.5em 0 1.5em;font-size:0.9em;}
-    /* sitenews bar*/
-#bonusbar {width:150px; float:left;}
-        /* ads */
-#pwblock{padding-top:0;margin-top:0;}
-#pwblock td{padding:0px;}
-#pwblock table{margin-bottom:0px;width:auto;}
-.pwlink{font-size:0.9em;}
-    /* dark background sidebar*/
-#sitebar{float:right;margin-top:10px;margin-right:0pt;width:190px;padding-right:0pt;}
-#copy{padding-left:1.5em;padding-right:1.5em;}
-#pig{text-align:center;padding:0;margin:0;}
-    /* used in debug mode */
-#sqldebug{clear:both;margin-right:0pt;padding-right:0pt;}
-    /* used all over the place */
-.box{background:#EEE;margin:0 0 1.5em 0;padding:1.5em;}
-
-/* headers */
-h1,h2,h3,h4,h5,h6{font-size:1em;font-weight:bold;line-height:1.5;margin-bottom:0px;}
-h1 img,h2 img,h3 img,h4 img,h5 img,h6 img{margin:0;}
-h3{color:#444;}
-
-/* lists */
-li ul{margin:0 1.5em;}
-ul{margin:0 1.5em 1.5em 1.5em;}
-
-/* the nav list */
-ul.nav li a,ul.nav li span.currently{border:1px solid;display:block;text-decoration:none;padding:0;padding-left:0.5em;}
-ul.nav li a{border-color:#ccc;background-color:#fff;}
-ul.nav li span.currently{border-color:#eee;background-color:#eee;}
-ul.nav li a:hover{background-color:#ccc;}
-ul.nav li a span{font-style:italic;}
-.nav{list-style-type:none;margin-left:0;margin-right:0;}
-#main li span { float: right; padding: 0 1em 0 1em;}
-/* some more cleanup */
-blockquote:before,blockquote:after,q:before,q:after{content:"";}
-blockquote,q{quotes:"" "";}
-
-/* text */
-p{margin:0 0 1.5em;}
-code{margin:1.5em 0;white-space:normal;font:1em 'andale mono','lucida console',monospace;line-height:1.5;width:550px;}
-a img{border:none;}
-a:focus,a:hover{color:#000;}
-a{color:#009;text-decoration:underline;}
-strong{font-weight:bold;}
-em{font-style:italic;}
-a:hover{background:#ccc;}
-#facebook{float:right;margin-top:-1.5em;}
-
-/* comic page */
-#title { margin-bottom: auto; margin-top: none;}
-#transcription{margin-right:0pt;float:left;width:550px;padding-right:0pt;}
-#saved{padding:0.5em; background:#EEE;margin-bottom:1em;}
-#topnav { float: right;}
-.storynavstart {float: left;}
-.storynavend {float: right;}
-.storytitle {text-align: center; margin-bottom: 0;}
-.storytitle  a {font-size: 0.9em; text-decoration: none; color: #444;}
-#topnav, .storynavstart, .storynavend { padding: 0px; margin: 4px 0 0 0;}
-#topnav li, .storynavstart li, .storynavend li { margin: 2px; padding: 0px; list-style: none; float:left; width: 14px;background-image: url(http://static.nameremoved.com/pix/arrows.png); overflow:hidden;} 
-#topnav a, #topnav li, .storynavstart a, .storynavend a, .storynavstart li, .storynavend li { height: 7px; display: block;}
-#topnavfirst, .storyfirst {background-position: 0px 0px;}
-#topnavfirst:hover, .storyfirst:hover {background-position: 0px -16px;}
-#topnavfirstnot, .storyfirstnot {background-position: 0px -8px;}
-#topnavprev, .storyprev {background-position: -15px 0px;}
-#topnavprev:hover, .storyprev:hover {background-position: -15px -16px;}
-#topnavprevnot, .storyprevnot {background-position: -15px -8px;}
-#topnavnext, .storynext {background-position: -30px 0px;}
-#topnavnext:hover, .storynext:hover {background-position: -30px -16px;}
-#topnavnextnot, .storynextnot {background-position: -30px -8px;}
-#topnavlast, .storylast {background-position: -45px 0px;}
-#topnavlast:hover, .storylast:hover {background-position: -45px -16px;}
-#topnavlastnot, .storylastnot {background-position: -45px -8px;}
-#topnav a, .storynavstart a, .storynavend a {text-indent: -600px;}
-#topnav a:hover, .storynavstart a, .storynavend a {background: none;}
-#bottomnav li {width: 70px; float:left; padding-right: 5px;}
-#bottomnav span.currently {float:none;}
-#bottomnav li.forward { text-align: right; }
-#facebook a,#bottomnav a, #permalink a {border:1px solid;display:block;text-decoration:none;padding:0 0.5em 0 0.5em;border-color:#ccc;background-color:#fff;}
-#facebook a:hover, #bottomnav a:hover, #permalink a:hover, #suggester a:hover {background-color:#ccc;}
-
-/* contributions */
-.nrccs,.nrccs a{border:2px solid red;}
-.nrccs{padding:20px;margin:10px;}
-.nrccs a{display:block;padding:10px;}
-.nrccs a:hover{background:red;}
-#please{font-size:2em;}
-h4{color:#666;margin-top:1.5em;}
-.contribution{margin:0 6em 0.5em 6em;}
-#contributors .nav{margin:0 6em 0.5em 6em;}
-
-/* default contribute box */
-#suggester {background-color:#ff9; border: 1px solid; margin-top:1em;}
-#suggester a {display:block;text-decoration:none;padding:0 0.5em 0 0.5em;border-color:#ccc;}
-#suggester form {padding: 1.5em;}
-#suggester textarea, #suggester input {width:146px;}
-#suggester span.thanks {padding: 1.5em; display: block;}
-#suggester span.help, #suggester span.error { font-size: 0.9em;}
-#suggester span.error {color: red;}
+#container{width:1080px;margin:0 auto;}
+#container:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
+a{text-decoration:none;color:#232156;font-style:italic;}
+a[href^="http://"]{color:#4a4a4a;}
+a:hover{color:white;background:#4a4a4a;}
+hr{background:#666;color:#666;width:100%;height:1px;margin:0 0 1.5em;border:none;}
+p,ul{margin-bottom:1.5em;}
+h2,h3,h4{margin-bottom:0.5em;text-transform:uppercase;}
+li{list-style-type:none;}
+#right{float:right;width:490px;margin-right:10px;}
+h1{margin-bottom:10px;}
+#meta{float:right;width:252px;background:#EEE;padding:10px;}
+#sitenav{width:121px;float:left;font-weight:bold;letter-spacing: 0.1em;line-height:1.5;}
+#sitenav li{list-style-type:none;background:white;margin-bottom:2px;text-transform:uppercase;}
+#sitenav a{font-style:normal;padding-top:2px;}
+#sitenav li.currently{background:#7868b6;padding-left:8px;padding-top:2px;display:block;color:white;}
+#sitenav li a{display:block;padding-left: 8px;color:#232156;}
+#sitenav li a:hover{background:#232156;color:white;}
+#pwblock{width:121px;float:right;background:white;}
+#pwblock p{margin:0;text-align:center;}
+#suggester{clear:both;background:white;}
+#suggester a{display:block;padding:2px 10px 2px 10px;}
+#linksbar ul{margin-top:10px;}
+#linksbar li{list-style-type:none;}
+#main{float:left;width:550px;background:white;margin-left:10px;}
+#sidebar{float:left;width:200px;}
+#sqldebug{float:left;padding:20px;background:#eaeaea;margin-top:40px;}
+.inline li{display:inline; text-transform: uppercase;font-size: 0.9em;}
+.inline li a{font-style:italic;}
+p.storytitle{margin-bottom:0;font-style:italic;}
+.nav a{font-style:italic;}
+code {white-space:normal;font:1em 'andale mono','lucida console',monospace;line-height:1.5;}
+#contribform{width:232px;margin:10px;padding-top:10px;padding-bottom:10px;}
+#suggester input, #suggester textarea {width:228px;border:1px solid #4a4a4a ;padding:1px;margin:0;background: #ccc; color:black;}
+#suggester #contribformsubmit {width: 230px;}
+#suggester p {margin-bottom: 0;}
+#suggester .help, #suggester .errorlist {font-style: italic; margin: 0;}
+#suggester .errorlist {color: red;}
+#updates {text-transform: uppercase;}
+#copy {line-height:1.2;}
+#pig {margin-bottom:0;}
+#main .ui-state-active a, .currently {font-style: normal;color:red;}
+#main .ui-state-active a:hover {background: white;}
+.ui-tabs .ui-tabs-hide { display: none !important; }
